# ClawCombat

./: .gitignore  Cargo.toml  README.md  full.txt  merge_rs.sh  run_cargo.bat  run_client.bat  run_client.sh  run_server.bat
battle_core/src/: config.rs  types.rs
battle_core/src/behavior/: gesture.rs  mod.rs
battle_core/src/deployment/: mod.rs
battle_core/src/entity/: soldier.rs
battle_core/src/game/: cover.rs  squad.rs  weapon.rs
battle_core/src/map/: interior.rs  mod.rs  terrain.rs
battle_core/src/message/: mod.rs
battle_core/src/order/: mod.rs
battle_core/src/physics/: path.rs  visibility.rs
battle_core/src/state/battle/: message.rs  mod.rs  order.rs  soldier.rs
battle_gui/: Cargo.toml
battle_gui/src/: run.rs
battle_gui/src/audio/: player.rs
battle_gui/src/engine/: draw.rs  embedding.rs  end.rs  ggegui_patch.rs  gui.rs  ime.rs  intro.rs  message.rs  mod.rs  network.rs  order.rs  react.rs  state.rs  ui.rs
battle_gui/src/engine/debug/: mod.rs
battle_gui/src/engine/debug/gui/: header.rs  mod.rs
battle_gui/src/server/: mod.rs
battle_gui/src/ui/: action.rs
battle_gui/src/ui/hud/: builder.rs  minimap.rs  squad.rs
battle_server/: Cargo.toml
battle_server/src/: bin.rs
battle_server/src/runner/: embedding.rs  flag.rs  input.rs  logger.rs  mod.rs  movement.rs  react.rs  soldier.rs  support_network.rs  tick.rs  update.rs  utils.rs  visibility.rs
battle_server/src/runner/behavior/: blast.rs  bullet.rs  defend.rs  engage.rs  mod.rs  moves.rs
battle_server/src/runner/fight/: choose.rs
battle_server/src/runner/gesture/: fire.rs  mod.rs  soldier.rs
battle_server/src/runner/physics/: bullet.rs  explosion.rs
battle_tools/src/: hardcode.rs
llm_agent/: cargo.toml
llm_agent/crates/: CLAUDE.md  Cargo.toml  README.md  build.rs  spirv-opt.conf
llm_agent/crates/.github/workflows/: CI.yml
llm_agent/crates/examples/: chat.rs
llm_agent/crates/scripts/: bpe.py  extract.py
llm_agent/crates/src/: bench.rs  decode.rs  error.rs  forward.rs  kv_snapshot.rs  lib.rs  minify.rs  model.rs  msl_strip.rs  session.rs
llm_agent/crates/src/shaders/: .clang-format  attention_merge.comp  attention_prefill_tiled.comp  attention_split.comp  embed.comp  kv_writeback_fused.comp  matmul_q1_0_q8_0.comp  matmul_q1_0_q8_0.metal  matvec_q1_0.comp  matvec_q1_0_fused_normed.comp  matvec_q1_0_silu.comp  q_norm_rope_fused.comp  rms_norm.comp  rms_norm_q8_0.comp  silu_mul_q8_0.comp  topk_merge.comp  topk_partial.comp
llm_agent/crates/src/shaders/lib/: bitfield.glsl  kv_cache_load.glsl  preamble.glsl  q1_0_load.glsl  q1_0_matvec.glsl  q8_0_quantize.glsl  subgroup_reduce_scalar.glsl  subgroup_reduce_v4.glsl
llm_agent/crates/tests/: gpu_integration.rs
llm_agent/src/: generate.rs  lib.rs  model.rs
resources/tactics/: flag_capture_openfield.md  sneak_flank.md  suppress_fire.md
