[package]
name = "battle_server"
version = "0.4.0"
authors = ["Sevajol Bastien <contact@bux.fr>"]
edition = "2021"

[lib]
name = "battle_server"
path = "src/lib.rs"

[[bin]]
name = "battle_server"
path = "src/bin.rs"


[dependencies]
battle_core = { path = "../battle_core" }
oc_core = { path = "../oc_core" }
llm_agent = { path = "../llm_agent" }
crossbeam-channel = "0.5.6"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.152"
structopt = "0.3.21"
glam = { version = "0.22.0", features = ["mint"]}
rayon = "1"
puffin_http = "0.11.1"
puffin = "0.19.0"
rand = "0.8.5"
log = "0.4.13"
env_logger = "0.10.0"
mecab-ko = "0.7.2"
anyhow = "1.0.69"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
tokenizers = "0.22.0"
serde_json = "1.0.150"
chrono = "0.4"
